--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,9 @@
             <plugin>
 				 <groupId>org.apache.maven.plugins</groupId>
 				 <artifactId>maven-eclipse-plugin</artifactId>
+				 <version>2.9</version>
 				 <configuration>
-				     <ajdtVersion>none</ajdtVersion>
+				     <ajdtVersion>${org.aspectj-version}</ajdtVersion>
 				 </configuration>
 			</plugin>
             <plugin>
