--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>jedis</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+		 <dependency>
+    		<groupId>de.undercouch</groupId>
+    		<artifactId>bson4jackson</artifactId>
+    		<version>2.0.0</version>
+  		</dependency>
         <dependency>        
 	    <groupId>log4j</groupId>
 	    <artifactId>log4j</artifactId>
