Added documentation and some bash scripts.

--- a/.project
+++ b/.project
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>BroadcastingInterfaces</name>
-  <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <comment>A framework that automatically generates an implementation
+		for messaging between decoupled objects within and between virtual
+		machines by simply defining an interface. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
     <buildCommand>
