--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,49 @@
-<!--
-  Copyright (c) 2012, tickcode.org
-  All rights reserved.
-  
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions are met:
-      * Redistributions of source code must retain the above copyright
-        notice, this list of conditions and the following disclaimer.
-      * Redistributions in binary form must reproduce the above copyright
-        notice, this list of conditions and the following disclaimer in the
-        documentation and/or other materials provided with the distribution.
-      * Neither the name of tickcode, nor tickcode.org, nor the
-        names of its contributors may be used to endorse or promote products
-        derived from this software without specific prior written permission.
-  
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-  ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY
-  DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
-  ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.tickcode</groupId>
-    <artifactId>BroadcastingInterfaces</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-
-    <properties>
-        <org.aspectj-version>1.6.11</org.aspectj-version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.tickcode</groupId>
+	<artifactId>BroadcastingInterfaces</artifactId>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
+	<name>BroadcastingInterfaces</name>
+	<description>A framework that automatically generates an implementation
+		for messaging between decoupled objects within and between virtual
+		machines by simply defining an interface.</description>
+	<url>https://github.com/tickcode/BroadcastingInterfaces</url>
+	<licenses>
+		<license>
+			<name>The BSD 3-Clause License</name>
+			<url>http://tickcode.org/LICENSE</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:git://github.com/tickcode/BroadcastingInterfaces.git</connection>
+		<developerConnection>scm:git:https://tickcode@github.com/tickcode/BroadcastingInterfaces.git</developerConnection>
+		<url>https://github.com/tickcode/BroadcastingInterfaces</url>
+	</scm>
+	<developers>
+    <developer>
+      <id>tickcode</id>
+      <name>Eyon Land</name>
+      <email>tickcode@gmail.com</email>
+    </developer>
+  </developers>
+	<properties>
+		<org.aspectj-version>1.6.11</org.aspectj-version>
 		<maven.compiler.source>6</maven.compiler.source>
-   		<maven.compiler.target>6</maven.compiler.target>
+		<maven.compiler.target>6</maven.compiler.target>
 		<project.build.java.target>1.6</project.build.java.target>
-    </properties>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${org.aspectj-version}</version>
-        </dependency>
-        <dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${org.aspectj-version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${org.aspectj-version}</version>
@@ -60,92 +58,105 @@
 			<artifactId>jedis</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-		 <dependency>
-    		<groupId>de.undercouch</groupId>
-    		<artifactId>bson4jackson</artifactId>
-    		<version>2.0.0</version>
-  		</dependency>
-        <dependency>        
-	    <groupId>log4j</groupId>
-	    <artifactId>log4j</artifactId>
-	    <version>1.2.17</version>
-	</dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.7</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>de.undercouch</groupId>
+			<artifactId>bson4jackson</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.7</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-				 <groupId>org.apache.maven.plugins</groupId>
-				 <artifactId>maven-eclipse-plugin</artifactId>
-				 <version>2.9</version>
-				 <configuration>
-				     <ajdtVersion>${org.aspectj-version}</ajdtVersion>
-				 </configuration>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<ajdtVersion>${org.aspectj-version}</ajdtVersion>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
-		<configuration>
-          	<source>1.6</source>
-          	<target>1.6</target>
-        	</configuration>
-		<executions>
-          	<execution>
-            <!-- Modifying output directory of default compile because non-weaved classes must be stored
-                 in separate folder to not confuse ajc by reweaving already woven classes (which leads to
-                 to ajc error message like "bad weaverState.Kind: -115") -->
-            	<id>default-compile</id>
-            	<configuration>
-              	<compilerArguments>
-                	<d>${project.build.directory}/unwoven-classes</d>
-              	</compilerArguments>
-            	</configuration>
-          	</execution>
-        	</executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>install</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>sources</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.4</version>
-		<configuration>
-	   	<weaveDirectories>
-            	<weaveDirectory>${project.build.directory}/unwoven-classes</weaveDirectory>
-          	</weaveDirectories>
-            	<ajdtBuildDefFile>build-1-6.ajproperties</ajdtBuildDefFile>
-		<source>1.6</source>
-		<target>1.6</target>
-        	</configuration>
-		<executions>
-          		<execution>
-<!-- Compile and weave aspects after all classes compiled by javac -->
-            <phase>process-classes</phase>
-            		<goals>
-              		<goal>compile</goal>       <!-- use this goal to weave all your main classes -->
-              		<goal>test-compile</goal>  <!-- use this goal to weave all your test classes -->
-            		</goals>
-          		</execution>
-		</executions>
-            </plugin>
-        </plugins>
-    </build>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+				<executions>
+					<execution>
+						<!-- Modifying output directory of default compile because non-weaved 
+							classes must be stored in separate folder to not confuse ajc by reweaving 
+							already woven classes (which leads to to ajc error message like "bad weaverState.Kind: 
+							-115") -->
+						<id>default-compile</id>
+						<configuration>
+							<compilerArguments>
+								<d>${project.build.directory}/unwoven-classes</d>
+							</compilerArguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>install</id>
+						<phase>install</phase>
+						<goals>
+							<goal>sources</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.4</version>
+				<configuration>
+					<weaveDirectories>
+						<weaveDirectory>${project.build.directory}/unwoven-classes</weaveDirectory>
+					</weaveDirectories>
+					<ajdtBuildDefFile>build-1-6.ajproperties</ajdtBuildDefFile>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+				<executions>
+					<execution>
+						<!-- Compile and weave aspects after all classes compiled by javac -->
+						<phase>process-classes</phase>
+						<goals>
+							<goal>compile</goal>       <!-- use this goal to weave all your main classes -->
+							<goal>test-compile</goal>  <!-- use this goal to weave all your test classes -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
