--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.tickcode</groupId>
 	<artifactId>BroadcastingInterfaces</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>BroadcastingInterfaces</name>
 	<description>A framework that automatically generates an implementation
@@ -26,7 +26,7 @@
 		<connection>scm:git:git://github.com/tickcode/BroadcastingInterfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:tickcode/BroadcastingInterfaces.git</developerConnection>
 		<url>git@github.com:tickcode/BroadcastingInterfaces.git</url>
-	  <tag>BroadcastingInterfaces-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<developers>
 		<developer>
