--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -26,8 +27,8 @@
 		<connection>scm:git:git://github.com/tickcode/BroadcastingInterfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:tickcode/BroadcastingInterfaces.git</developerConnection>
 		<url>git@github.com:tickcode/BroadcastingInterfaces.git</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<developers>
 		<developer>
 			<id>tickcode</id>
@@ -53,9 +54,10 @@
 			<version>2.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>de.undercouch</groupId>
-			<artifactId>bson4jackson</artifactId>
-			<version>2.0.0</version>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>2.20</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -72,7 +74,7 @@
 
 	<build>
 		<plugins>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -81,7 +83,7 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-           </plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
