--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -13,7 +14,8 @@
 	<name>BroadcastingInterfaces</name>
 	<description>A framework that automatically generates an implementation
 		for messaging between decoupled objects within and between virtual
-		machines by simply defining an interface.</description>
+		machines by simply defining an interface.
+	</description>
 	<url>https://github.com/tickcode/BroadcastingInterfaces</url>
 	<licenses>
 		<license>
@@ -23,8 +25,10 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:git:git://github.com/tickcode/BroadcastingInterfaces.git</connection>
-		<developerConnection>scm:git:git@github.com:tickcode/BroadcastingInterfaces.git</developerConnection>
+		<connection>scm:git:git://github.com/tickcode/BroadcastingInterfaces.git
+		</connection>
+		<developerConnection>scm:git:git@github.com:tickcode/BroadcastingInterfaces.git
+		</developerConnection>
 		<url>git@github.com:tickcode/BroadcastingInterfaces.git</url>
 		<tag>HEAD</tag>
 	</scm>
@@ -40,19 +44,13 @@
 		<maven.compiler.target>6</maven.compiler.target>
 		<project.build.java.target>1.6</project.build.java.target>
 	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.12.1.GA</version>
-		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-  		<dependency>
+		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.7</version>
